Prevent scrollbar from adding-up to the width of page

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,10 @@
 	-webkit-font-smoothing: antialiased;
 }
 
+body {
+	overflow-y: overlay;
+}
+
 main {
 	display: flex;
 	flex-direction: column;
